# wahl-kumpel

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  ingestion.py  main.py  pyproject.toml
src/me/daif/: main.py
src/me/daif/agent/: kumpel.py  language.py  response_schema.py
static/: robots.txt  sitemap.xml
templates/: index.html
