[project]
name = "wahl-kumpel"
version = "0.1.0"
description = "An assistant to answer urging questions on the parties running for German elections"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.9.0.post1",
    "fastapi[standard]>=0.115.6",
    "ipdb>=0.13.13",
    "jinja2>=3.1.5",
    "langchain>=0.3.14",
    "langchain-community>=0.3.14",
    "langchain-openai>=0.3.0",
    "langchain-pinecone>=0.2.2",
    "pypdf>=5.1.0",
    "ruff>=0.9.2",
]
[project.scripts]
wahl-kumpel = "me.daif.main:main"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
